--- a/views/pages/db-info.ejs
+++ b/views/pages/db-info.ejs
@@ -16,9 +16,8 @@
         <ul>
             <% obs.forEach(function(r) { %> 
                 <li>
-                    <%= r.tasks_id%> for <%= r.duration %>  
+                    <%= r.tasks_id%> for <%= r.duration.minutes %>:<%= r.duration.seconds %>
                 </li>
-                console.log(obs.rows[0].duration.minutes);
 
             <% }); %>
         </ul>
