--- a/views/pages/db-info.ejs
+++ b/views/pages/db-info.ejs
@@ -16,7 +16,7 @@
         <ul>
             <% obs.forEach(function(r) { %> 
                 <li>
-                    <%= r.tasks_id%> for <%= r.duration.minutes %>:<%= r.duration.seconds %>
+                    <%= r.tasks_id%> for <%= r.duration.minutes || "00" %>:<%= r.duration.seconds || "00" %>
                 </li>
 
             <% }); %>
