--- a/views/pages/db-info.ejs
+++ b/views/pages/db-info.ejs
@@ -1,25 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>DB Info</title>
-        <meta charset="UTF-8">
-    </head>
-    <body>
-        <h1>Database Tables</h1>
-        <ul>
-            <% tables.forEach(function(r) { %>
-            <li> <%= r.table %>: <%= r.column %> (<%= r.type %>)</li>
-            
-            <% }); %>
-        </ul>
-        <h1>Observation</h1>
-        <ul>
-            <% obs.forEach(function(r) { %> 
-                <li>
-                    <%= r.tasks_id%> for <%= r.duration.minutes || "00" %>:<%= r.duration.seconds || "00" %>
-                </li>
-
-            <% }); %>
-        </ul>
-    </body>
+<head>
+  <title>DB Info</title>
+  <meta charset="UTF-8">
+</head>
+  <body>
+    <h1>Database Tables</h1>
+    <ul>
+      <% tables.forEach(function(r) { %>
+        <li><%= r.table %>: <%= r.column %> (<%= r.type %>)</li>
+      <% }); %>
+    </ul>
+    <h1>Observations</h1>
+    <ul>
+      <% obs.forEach(function(r) { %>
+        <li><%= r.tasks_id %> for <%= r.duration.minutes || "00" %>:<%= r.duration.seconds || "00" %></li>
+      <% }); %>
+    </ul>
+  </body>
 </html>
