Fix issue with CSS stylesheet

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     
-    <link href="../../css/styles.css" rel="stylesheet" type="text/css" />
+    <link href="../../css/styles.css" rel="stylesheet" />
     <title>PE Tracker</title>
 </head>
 <body>
