Changed duplicate IDs to class tags

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -28,19 +28,19 @@
     
             <div class="formGroup">
               <br>
-              <label for="date" id="date-lbl">Date:</label>
+              <label id="date-lbl">Date:</label>
               <input type="text" id="date-text" name="date">
     
               <br>
-              <label for="grade" id="grade-lbl">Grade:</label>
+              <label id="grade-lbl">Grade:</label>
               <input type="text" id="grade-text" name="grade">
     
               <br>
-              <label for="topic" id="topic-lbl">Topic:</label>
+              <label id="topic-lbl">Topic:</label>
               <input type="text" id="topic-text" name="topic">
     
               <br>
-              <label for="topic" id="student-lbl">Student N:</label>
+              <label id="student-lbl">Student N:</label>
               <input type="text" id="student-text" name="student">
     
             </div>
@@ -52,11 +52,7 @@
     
             <div class="inner-left">
               <h3>Teacher Behavior</h3>
-              <button id="warmUpAndReviewBtn" onclick="TODO">Warmup/Review</button>
-    
               <br>
-    
-    
               <div class="button-area">
                 <button class="planned-btn" onclick="TODO">Planned Pres</button>
                 <button class="response-btn" onclick="TODO">Response Pres</button>
@@ -78,9 +74,6 @@
               <div class="time" style="border: 1px solid black;">
                 <h3>Time</h3>
     
-                <input type="text" id="warmUpAndReviewTime" name="warmUpAndReviewTime">
-                <br><br>
-    
                 <input type="text" id="plannedTime" name="plannedTime">
                 <br>
                 <input type="text" id="responseTime" name="responseTime">
@@ -91,7 +84,7 @@
                 <br>
                 <input type="text" id="motivTime" name="motivTime">
                 <br>
-                <input type="text" id="classTime" name="warmUpAndReviewTime">
+                <input type="text" id="classTime" name="classTime">
                 <br>
                 <input type="text" id="equipmentTime" name="equipmentTime">
                 <br>
@@ -145,15 +138,15 @@
                 <br>
                 <input type="text" id="motivNum" name="motivNum">
                 <br>
-                <input type="text" id="classNum" name="classNum">
+                <input type="text" class="classNum" name="classNum">
                 <br>
-                <input type="text" id="equipmentNum" name="equipmentNum">
+                <input type="text" class="equipmentNum" name="equipmentNum">
                 <br>
-                <input type="text" id="organizationNum" name="organizationNum">
+                <input type="text" class="organizationNum" name="organizationNum">
                 <br>
-                <input type="text" id="behaviorNum" name="behaviorNum">
+                <input type="text" class="behaviorNum" name="behaviorNum">
                 <br>
-                <input type="text" id="otherTasksNum" name="otherTasksNum">
+                <input type="text" class="otherTasksNum" name="otherTasksNum">
     
               </div>
             </div>
@@ -218,7 +211,7 @@
                   <br>
                 </div>
     
-                <input type="text" id="classTime" name="warmUpAndReviewTime">
+                <input type="text" id="classTime" name="classTime">
                 <br>
                 <input type="text" id="equipmentTime" name="equipmentTime">
                 <br>
@@ -287,15 +280,15 @@
                   <br>
                 </div>
     
-                <input type="text" id="classNum" name="classNum">
+                <input type="text" class="classNum" name="classNum">
                 <br>
-                <input type="text" id="equipmentNum" name="equipmentNum">
+                <input type="text" class="equipmentNum" name="equipmentNum">
                 <br>
-                <input type="text" id="organizationNum" name="organizationNum">
+                <input type="text" class="organizationNum" name="organizationNum">
                 <br>
-                <input type="text" id="behaviorNum" name="behaviorNum">
+                <input type="text" class="behaviorNum" name="behaviorNum">
                 <br>
-                <input type="text" id="otherTasksNum" name="otherTasksNum">
+                <input type="text" class="otherTasksNum" name="otherTasksNum">
     
               </div>
             </div>
