Change more duplicate IDs to class tags

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -84,21 +84,20 @@
                 <br>
                 <input type="text" id="motivTime" name="motivTime">
                 <br>
-                <input type="text" id="classTime" name="classTime">
+                <input type="text" class="classTime" name="classTime">
                 <br>
-                <input type="text" id="equipmentTime" name="equipmentTime">
+                <input type="text" class="equipmentTime" name="equipmentTime">
                 <br>
-                <input type="text" id="organizationTime" name="organizationTime">
+                <input type="text" class="organizationTime" name="organizationTime">
                 <br>
-                <input type="text" id="behaviorTime" name="behaviorTime">
+                <input type="text" class="behaviorTime" name="behaviorTime">
                 <br>
-                <input type="text" id="otherTasksTime" name="otherTasksTime">
+                <input type="text" class="otherTasksTime" name="otherTasksTime">
     
               </div>
     
               <div class="percent" style="border: 1px solid black;">
                 <h3>%</h3>
-                <input type="text" id="warmUpAndReviewPercent" name="warmUpAndReviewPercent">
                 <br><br>
     
                 <input type="text" id="plannedPercent" name="plannedPercent">
@@ -111,21 +110,21 @@
                 <br>
                 <input type="text" id="motivPercent" name="motivPercent">
                 <br>
-                <input type="text" id="classPercent" name="classPercent">
+                <input type="text" class="classPercent" name="classPercent">
                 <br>
-                <input type="text" id="equipmentPercent" name="equipmentPercent">
+                <input type="text" class="equipmentPercent" name="equipmentPercent">
                 <br>
-                <input type="text" id="organizationPercent" name="organizationPercent">
+                <input type="text" class="organizationPercent" name="organizationPercent">
                 <br>
-                <input type="text" id="behaviorPercent" name="behaviorPercent">
+                <input type="text" class="behaviorPercent" name="behaviorPercent">
                 <br>
-                <input type="text" id="otherTasksPercent" name="otherTasksPercent">
+                <input type="text" class="otherTasksPercent" name="otherTasksPercent">
     
               </div>
     
               <div class="num" style="border: 1px solid black;">
                 <h3>#</h3>
-                <input type="text" id="warmUpAndReviewNum" name="warmUpAndReviewNum">
+                <input type="text" class="warmUpAndReviewNum" name="warmUpAndReviewNum">
                 <br><br>
     
                 <input type="text" id="plannedNum" name="plannedNum">
@@ -211,15 +210,15 @@
                   <br>
                 </div>
     
-                <input type="text" id="classTime" name="classTime">
+                <input type="text" class="classTime" name="classTime">
                 <br>
-                <input type="text" id="equipmentTime" name="equipmentTime">
+                <input type="text" class="equipmentTime" name="equipmentTime">
                 <br>
-                <input type="text" id="organizationTime" name="organizationTime">
+                <input type="text" class="organizationTime" name="organizationTime">
                 <br>
-                <input type="text" id="behaviorTime" name="behaviorTime">
+                <input type="text" class="behaviorTime" name="behaviorTime">
                 <br>
-                <input type="text" id="otherTasksTime" name="otherTasksTime">
+                <input type="text" class="otherTasksTime" name="otherTasksTime">
               </div>
     
               <div class="percent" style="border: 1px solid black;">
@@ -245,21 +244,21 @@
                   <br>
                 </div>
     
-                <input type="text" id="classPercent" name="classPercent">
+                <input type="text" class="classPercent" name="classPercent">
                 <br>
-                <input type="text" id="equipmentPercent" name="equipmentPercent">
+                <input type="text" class="equipmentPercent" name="equipmentPercent">
                 <br>
-                <input type="text" id="organizationPercent" name="organizationPercent">
+                <input type="text" class="organizationPercent" name="organizationPercent">
                 <br>
-                <input type="text" id="behaviorPercent" name="behaviorPercent">
+                <input type="text" class="behaviorPercent" name="behaviorPercent">
                 <br>
-                <input type="text" id="otherTasksPercent" name="otherTasksPercent">
+                <input type="text" class="otherTasksPercent" name="otherTasksPercent">
     
               </div>
     
               <div class="num" style="border: 1px solid black;">
                 <h3>#</h3>
-                <input type="text" id="warmUpAndReviewNum" name="warmUpAndReviewNum">
+                <input type="text" class="warmUpAndReviewNum" name="warmUpAndReviewNum">
                 <br><br>
                 <input type="text" id="skillLearningNum" name="skillLearningNum">
                 <br><br>
