If applied, this commit will allow View Results button to go to db-info.

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -527,7 +527,7 @@
                 </div>
 
                 <div>
-                    <button id="view-results-btn" onclick="TODO">View Results</button>
+                    <button id="view-results-btn" onclick="window.location.href='db-info.ejs'">View Results</button>
                 </div>
 
                 <div class="inner-button-bottom">
@@ -559,6 +559,8 @@
             console.log(result);
             currentTaskId = id;
         };
+
+        
     </script>
 </body>
 
